--- a/Sat.Recruitment.Api/appsettings.json
+++ b/Sat.Recruitment.Api/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "UsersApiOptions": {
+    "Default": "0",
+    "NormalMin": "0.8",
+    "NormalMax": "0.12",
+    "SuperUser": "0.20",
+    "Premium": "2"
+  }
 }
